[project]
name = "calibration-log"
version = "0.1.0"
description = "A public, hash-chained, append-only track record of predictions — scored over time (Brier + calibration). Honesty you can't doctor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "StellarRequiem" }]
keywords = ["calibration", "forecasting", "brier", "predictions", "audit", "provenance", "accountability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # The hash-chained audit primitive lives ONCE, in verity-core (the spine).
    # Imported here, never re-vendored (this file used to be a byte-identical copy).
    "verity-core @ git+https://github.com/StellarRequiem/verity-core",
]

[project.scripts]
calibration-log = "calibration_log.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/StellarRequiem/calibration-log"
Repository = "https://github.com/StellarRequiem/calibration-log"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  # permit the verity-core git dependency declared above

[tool.hatch.build.targets.wheel]
packages = ["calibration_log"]

[tool.pytest.ini_options]
testpaths = ["tests"]
